# battery_monitor

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  README.md  REVIEW.md  idf_component.yml
host_test/: extra_dirs_common.cmake
host_test/test_battery_monitor/main/: CMakeLists.txt  test_battery_monitor.cpp
include/: adc_battery_reader.hpp  battery_monitor.hpp  battery_monitor_types.hpp
src/: adc_battery_reader.cpp  battery_monitor.cpp
test_apps/test_build/: CMakeLists.txt  sdkconfig.defaults
test_apps/test_build/main/: CMakeLists.txt  main.cpp
